Allow settings labels to wrap. Fixes #57

--- a/shadowcraft_ui/css/app.sass
+++ b/shadowcraft_ui/css/app.sass
@@ -421,6 +421,7 @@ html.websockets, html.history, html.canvas
         width: 170px
         text-align: right
         margin-right: 10px
+        white-space: normal
 
     .select, .input
       span.desc
